# geomalg

./: CMakeLists.txt  cppdock.json
include/geomalg/: CMakeLists.txt  Dialect.h  Geomalg.td  GeomalgDialect.h  Passes.h  Passes.td  Type.h  base.sld
lib/Geomalg/: CMakeLists.txt  Dialect.cpp  Geomalg.cpp  GeomalgDialect.cpp  Passes.cpp  Type.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Base/: define-func.scm
test/Pass/: geomalg-type-inference.mlir
test/Type/: metric.scm
tools/geomalg-opt/: CMakeLists.txt  geomalg_opt_main.cpp
